Brewery 1.21.6 + borukva's changes: spigot model; disabled polydex; changed display of additional info in the book; sorted drinks in ukranian; moved tooltip to lore;